# College-Discord-Bot

./: README.rst  pyproject.toml
college_discord_bot/: bot.py  disc_commands.py
