[tool.poetry]
name = "college_discord_bot"
version = "0.1.0"
description = ""
authors = ["MonkeyDoug <immortalgamerdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
discord = "^1.7.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
